@@ -18,42 +18,35 @@
  */
 package org.apache.accumulo.server.manager.state;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-import org.apache.accumulo.core.client.admin.TabletHostingGoal;
 import org.apache.accumulo.core.clientImpl.ClientContext;
+import org.apache.accumulo.core.manager.state.TabletManagement;
+import org.apache.accumulo.core.manager.state.TabletManagement.ManagementAction;
 import org.apache.accumulo.core.metadata.RootTable;
 import org.apache.accumulo.core.metadata.TServerInstance;
-import org.apache.accumulo.core.metadata.TabletLocationState;
 import org.apache.accumulo.core.metadata.schema.Ample;
 import org.apache.accumulo.core.metadata.schema.Ample.ReadConsistency;
-import org.apache.accumulo.core.metadata.schema.Ample.TabletMutator;
 import org.apache.accumulo.core.metadata.schema.TabletMetadata;
-import org.apache.accumulo.core.metadata.schema.TabletMetadata.Location;
-import org.apache.accumulo.core.metadata.schema.TabletMetadata.LocationType;
-import org.apache.accumulo.core.tabletserver.log.LogEntry;
-import org.apache.accumulo.server.util.ManagerMetadataUtil;
 import org.apache.hadoop.fs.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-class ZooTabletStateStore implements TabletStateStore {
+class ZooTabletStateStore extends AbstractTabletStateStore implements TabletStateStore {
 
   private static final Logger log = LoggerFactory.getLogger(ZooTabletStateStore.class);
   private final Ample ample;
-  private final ClientContext context;
 
   ZooTabletStateStore(ClientContext context) {
-    this.context = context;
+    super(context);
     this.ample = context.getAmple();
   }
 
   @Override
-  public ClosableIterator<TabletLocationState> iterator() {
+  public ClosableIterator<TabletManagement> iterator() {
 
     return new ClosableIterator<>() {
       boolean finished = false;
@@ -64,41 +57,10 @@ class ZooTabletStateStore implements TabletStateStore {
       }
 
       @Override
-      public TabletLocationState next() {
+      public TabletManagement next() {
         finished = true;
-        try {
-
-          TabletMetadata rootMeta = ample.readTablet(RootTable.EXTENT, ReadConsistency.EVENTUAL);
-
-          Location currentSession = null;
-          Location futureSession = null;
-          Location lastSession = null;
-
-          Location loc = rootMeta.getLocation();
-
-          if (loc != null && loc.getType() == LocationType.FUTURE) {
-            futureSession = loc;
-          }
-
-          if (rootMeta.getLast() != null) {
-            lastSession = rootMeta.getLast();
-          }
-
-          if (loc != null && loc.getType() == LocationType.CURRENT) {
-            currentSession = loc;
-          }
-
-          List<Collection<String>> logs = new ArrayList<>();
-          rootMeta.getLogs().forEach(logEntry -> {
-            logs.add(Collections.singleton(logEntry.filename));
-            log.debug("root tablet log {}", logEntry.filename);
-          });
-
-          return new TabletLocationState(RootTable.EXTENT, futureSession, currentSession,
-              lastSession, null, logs, false, TabletHostingGoal.ALWAYS, false);
-        } catch (Exception ex) {
-          throw new RuntimeException(ex);
-        }
+        TabletMetadata tm = ample.readTablet(RootTable.EXTENT, ReadConsistency.EVENTUAL);
+        return new TabletManagement(Set.of(ManagementAction.NEEDS_LOCATION_UPDATE), tm);
       }
 
       @Override
@@ -111,9 +73,7 @@ class ZooTabletStateStore implements TabletStateStore {
     };
   }
 
-  @Override
-  public void setFutureLocations(Collection<Assignment> assignments)
-      throws DistributedStoreException {
+  private static void validateAssignments(Collection<Assignment> assignments) {
     if (assignments.size() != 1) {
       throw new IllegalArgumentException("There is only one root tablet");
     }
@@ -121,75 +81,57 @@ class ZooTabletStateStore implements TabletStateStore {
     if (assignment.tablet.compareTo(RootTable.EXTENT) != 0) {
       throw new IllegalArgumentException("You can only store the root tablet location");
     }
+  }
 
-    TabletMutator tabletMutator = ample.mutateTablet(assignment.tablet);
-    tabletMutator.putLocation(Location.future(assignment.server));
-    tabletMutator.mutate();
+  @Override
+  public void setFutureLocations(Collection<Assignment> assignments)
+      throws DistributedStoreException {
+    validateAssignments(assignments);
+    super.setFutureLocations(assignments);
   }
 
   @Override
   public void setLocations(Collection<Assignment> assignments) throws DistributedStoreException {
-    if (assignments.size() != 1) {
-      throw new IllegalArgumentException("There is only one root tablet");
-    }
-    Assignment assignment = assignments.iterator().next();
-    if (assignment.tablet.compareTo(RootTable.EXTENT) != 0) {
-      throw new IllegalArgumentException("You can only store the root tablet location");
-    }
-
-    TabletMutator tabletMutator = ample.mutateTablet(assignment.tablet);
-    tabletMutator.putLocation(Location.current(assignment.server));
-    ManagerMetadataUtil.updateLastForAssignmentMode(context, ample, tabletMutator,
-        assignment.tablet, assignment.server);
-    tabletMutator.deleteLocation(Location.future(assignment.server));
-
-    tabletMutator.mutate();
+    validateAssignments(assignments);
+    super.setLocations(assignments);
   }
 
-  @Override
-  public void unassign(Collection<TabletLocationState> tablets,
-      Map<TServerInstance,List<Path>> logsForDeadServers) throws DistributedStoreException {
+  private static void validateTablets(Collection<TabletMetadata> tablets) {
     if (tablets.size() != 1) {
       throw new IllegalArgumentException("There is only one root tablet");
     }
-    TabletLocationState tls = tablets.iterator().next();
-    if (tls.extent.compareTo(RootTable.EXTENT) != 0) {
+    TabletMetadata tm = tablets.iterator().next();
+    if (tm.getExtent().compareTo(RootTable.EXTENT) != 0) {
       throw new IllegalArgumentException("You can only store the root tablet location");
     }
+  }
 
-    TabletMutator tabletMutator = ample.mutateTablet(tls.extent);
-    final TServerInstance futureOrCurrent = tls.futureOrCurrent().getServerInstance();
+  @Override
+  public void unassign(Collection<TabletMetadata> tablets,
+      Map<TServerInstance,List<Path>> logsForDeadServers) throws DistributedStoreException {
+    validateTablets(tablets);
 
-    tabletMutator.deleteLocation(Location.future(futureOrCurrent));
-    tabletMutator.deleteLocation(Location.current(futureOrCurrent));
-    ManagerMetadataUtil.updateLastForAssignmentMode(context, ample, tabletMutator, tls.extent,
-        futureOrCurrent);
-    if (logsForDeadServers != null) {
-      List<Path> logs = logsForDeadServers.get(futureOrCurrent);
-      if (logs != null) {
-        for (Path entry : logs) {
-          LogEntry logEntry =
-              new LogEntry(RootTable.EXTENT, System.currentTimeMillis(), entry.toString());
-          tabletMutator.putWal(logEntry);
-        }
-      }
-    }
-
-    tabletMutator.mutate();
+    super.unassign(tablets, logsForDeadServers);
 
     log.debug("unassign root tablet location");
   }
 
   @Override
-  public void suspend(Collection<TabletLocationState> tablets,
+  public void suspend(Collection<TabletMetadata> tablets,
       Map<TServerInstance,List<Path>> logsForDeadServers, long suspensionTimestamp)
       throws DistributedStoreException {
-    // No support for suspending root tablet.
-    unassign(tablets, logsForDeadServers);
+    validateTablets(tablets);
+    super.suspend(tablets, logsForDeadServers, suspensionTimestamp);
   }
 
   @Override
-  public void unsuspend(Collection<TabletLocationState> tablets) {
+  protected void processSuspension(Ample.ConditionalTabletMutator tabletMutator, TabletMetadata tm,
+      long suspensionTimestamp) {
+    // No support for suspending root tablet, so this is a NOOP
+  }
+
+  @Override
+  public void unsuspend(Collection<TabletMetadata> tablets) {
     // no support for suspending root tablet.
   }
 
